--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "ext-memcached": "^3.1",
         "backpack/crud": "^5.6",
+        "backpack/pro": "*",
         "cloudinary/cloudinary_php": "^2",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
@@ -20,6 +21,7 @@
     },
     "require-dev": {
         "backpack/generators": "^3.3",
+        "barryvdh/laravel-ide-helper": "*",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.19",
         "laravel/dusk": "^6.22",
@@ -70,5 +72,11 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "backpack": {
+            "type": "composer",
+            "url": "https://repo.backpackforlaravel.com/"
+        }
+    }
 }
