--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "php": "^8.0",
         "ext-memcached": "^3.1",
         "backpack/crud": "^5.6",
-        "backpack/pro": "*",
         "cloudinary/cloudinary_php": "^2",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
@@ -21,7 +20,7 @@
     },
     "require-dev": {
         "backpack/generators": "^3.3",
-        "barryvdh/laravel-ide-helper": "*",
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.19",
         "laravel/dusk": "^6.22",
@@ -73,10 +72,10 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "repositories": {
-        "backpack": {
+    "repositories": [
+        {
             "type": "composer",
             "url": "https://repo.backpackforlaravel.com/"
         }
-    }
+    ]
 }
