--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "backpack/generators": "^3.3",
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.17",
         "laravel/breeze": "^1.19",
         "laravel/dusk": "^6.22",
         "laravel/sail": "^1.0.1",
