--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "ext-memcached": "^3.1",
         "backpack/crud": "^5.6",
+        "backpack/pro": "*",
         "cloudinary/cloudinary_php": "^2",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
